--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
 <nav>
     <h2 class="nav-title">ma<span class="text-primary">r</span>y</h2>
     <ul>
@@ -19,9 +19,68 @@
         <li><button class="btn-primary">Here me</button></li>
     </ul>
 </nav>
+<!-- banner -->
+<div class="banner">
+   <div>
+    <h3 class="banner-sub-title">Hi' I am</h3>
+    <h1 class="banner-title">Mahabub Emon</h1>
+    <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+    <button class="btn-primary">Download Cv</button>
+    <button>Contact</button>
+   </div>
+   <img src="images/hardy.png" alt="">
+</div>
+
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">name:</p>
+                    <p class="info-description">Mahabub Emon</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">specillity:</p>
+                    <p class="info-description">web developer</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">location</p>
+                    <p class="info-description">Dhaka</p>
+                </div>
+            </div>
+        </section>
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-title-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id. Sit veniam incidunt animi provident!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Id natus, doloribus corrupti animi similique et esse. Quo pariatur quas nam, magnam veniam qui?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Numquam nostrum aliquam quaerat nisi aut sequi, rem explicabo natus tenetur, iure quas ut eius.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongo DB</p>
+                    <p class="skill-description">Laudantium beatae ducimus, provident nisi optio corrupti quasi quibusdam, tempora reprehenderit, facere est ut aliquam!</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
