--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
+    <header class="header hide">
 <nav>
     <h2 class="nav-title">ma<span class="text-primary">r</span>y</h2>
     <ul>
