--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header hide">
+    <header class="header ">
 <nav>
     <h2 class="nav-title">ma<span class="text-primary">r</span>y</h2>
     <ul>
@@ -138,7 +138,26 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">
+                Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+            </p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me. Right Now.</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" placeholder="Your Email" id="">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
